# k3-live-manager

k3-live-manager/: .gitignore  package.json  vite.config.ts
k3-live-manager/doc/: README.md  ai-instructions.md  architecture.md  database.md  design-rules.md  implementation-rules.md  oauth-flow.md  operations.md
k3-live-manager/doc/specs/: TEMPLATE.md  src-tauri_src_db_commands.add_service_credential.md  src-tauri_src_db_commands.ensure_valid_access_token.md  src-tauri_src_db_commands.get_service_credentials.md  src-tauri_src_db_commands.start_oauth_flow.md  src-tauri_src_db_repositories.md  src-tauri_src_oauth_server.md  src-tauri_src_services_credential_service.md  src-tauri_src_services_oauth_service.md  src_pages_AddCredentialPage.md  src_pages_CredentialsListPage.md  src_pages_HomePage.md
k3-live-manager/src/: App.tsx
k3-live-manager/src-tauri/: ARCHITECTURE.md  Cargo.toml  tauri.conf.json
k3-live-manager/src-tauri/capabilities/: default.json
k3-live-manager/src-tauri/migrations/: 20250825110253_create_service_credentials_table.sql  20250825110306_create_oauth_tokens_table.sql.sql  20250829000001_add_unique_constraint_oauth_tokens.sql
k3-live-manager/src-tauri/src/: lib.rs  main.rs  oauth_server.rs
k3-live-manager/src-tauri/src/db/: commands.rs  mod.rs  models.rs  repositories.rs  setup.rs
k3-live-manager/src-tauri/src/services/: credential_service.rs  mod.rs  oauth_service.rs
k3-live-manager/src/pages/: AddCredentialPage.tsx  CredentialsListPage.tsx  HomePage.tsx
